- Import the otr.js library - Fix several UI issues en behaviour issues - Fix the embed and preview system during the post creation process - Fix some translations and links - Fix some header mobile issues - Add new informations in the Rooms list - Fix the chatbox alignement

--- a/app/widgets/Chat/chat.css
+++ b/app/widgets/Chat/chat.css
@@ -10,6 +10,7 @@
 #chat_widget .chat_box ul {
     margin: 0 auto;
     max-width: 100rem;
+    margin-left: calc(50% - 51rem);
 }
 
 #chat_widget .chat_box form {
@@ -60,5 +61,9 @@ table.emojis td:hover {
 @media screen and (max-width: 1024px) {
     #chat_widget .chat_box {
         width: 100%;
+    }
+
+    #chat_widget .chat_box ul {
+        margin-left: auto;
     }
 }
